tests/diagnostics/deref_non_ref.kal
# Dereferencing something that is not a reference.
fn f(n: i64) -> i64 = *n;
